--- a/i18n/es-ES/animtexture.json
+++ b/i18n/es-ES/animtexture.json
@@ -1,11 +1,11 @@
 {
-    "animtexture": {
-        "title": "Texturas animadas",
-        "subtitle": "Fácilmente fusiona texturas para animaciones de paquetes de recursos",
-        "textureName": "Nombre de la textura",
-        "cumulative": "Acumulativo (Activa esto si los fotogramas de gif están rotos)",
-        "generate": "Generar",
-        "downloadPNG": "Descargar PNG",
-        "downloadMCMETA": "Descargar MCMETA"
-    }
+  "animtexture": {
+    "cumulative": "Acumulativo (Activa esto si los fotogramas de gif están rotos)",
+    "downloadMCMETA": "Descargar MCMETA",
+    "downloadPNG": "Descargar PNG",
+    "generate": "Generar",
+    "subtitle": "Fácilmente fusiona texturas para animaciones de paquetes de recursos",
+    "textureName": "Nombre de la textura",
+    "title": "Texturas animadas"
+  }
 }
