--- a/i18n/es-ES/presettools.json
+++ b/i18n/es-ES/presettools.json
@@ -1,8 +1,8 @@
 {
-    "presettools": {
-        "title": "Actualizador de Preajustes",
-        "subtitle": "Esto actualizará las versiones antiguas de los preajustes a la versión más nueva.",
-        "input": "Entrada de preajuste",
-        "output": "Salida"
-    }
+  "presettools": {
+    "input": "Entrada de preajuste",
+    "output": "Salida",
+    "subtitle": "Esto actualizará las versiones antiguas de los preajustes a la versión más nueva.",
+    "title": "Actualizador de Preajustes"
+  }
 }
