--- a/i18n/ko-KR/flags.json
+++ b/i18n/ko-KR/flags.json
@@ -1,145 +1,151 @@
 {
   "flags": {
-    "title": "플래그 생성기",
-    "subtitle": "최적 플래그로 Minecraft 서버를 시작하는 간단한 스크립트 생성기",
-    "software": {
-      "label": "소프트웨어",
-      "description": "Minecraft 서버가 실행될 소프트웨어입니다."
+    "autoRestart": {
+      "description": "중지된 후 자동으로 다시 시작할지 여부",
+      "label": "자동 재시작"
     },
     "config": {
-      "label": "설정",
-      "description": "시작 스크립트에 추가 및 수정할 수 있는 다양한 사항들입니다."
+      "description": "시작 스크립트에 추가 및 수정할 수 있는 다양한 사항들입니다.",
+      "label": "설정"
     },
-    "result": "결과",
+    "enviroments": {
+      "description": "The operating system that the server runs on."
+    },
+    "environment": {
+      "label": "Environment"
+    },
     "environments": {
-      "label": "운영 체제",
-      "description": "서버가 실행되는 운영 체제입니다.",
-      "linux": {
-        "label": "리녹스",
-        "description": "서버에 가장 일반적으로 사용되는 운영 체제"
+      "command": {
+        "description": "서버를 시작하는 데 필요한 Java 명령만 포함",
+        "label": "명령"
       },
-      "windows": {
-        "label": "윈도우",
-        "description": "가정용 데스크탑에서 가장 일반적으로 사용되는 운영 체제"
+      "description": "서버가 실행되는 운영 체제입니다.",
+      "label": "운영 체제",
+      "linux": {
+        "description": "서버에 가장 일반적으로 사용되는 운영 체제",
+        "label": "리녹스"
       },
       "macos": {
-        "label": "맥OS",
-        "description": "애플의 운영 체제"
+        "description": "애플의 운영 체제",
+        "label": "맥OS"
       },
       "pterodactyl": {
-        "label": "Pterodactyl",
-        "description": "대부분의 호스트에서 사용하는 웹 기반 서버 관리 플랫폼"
+        "description": "대부분의 호스트에서 사용하는 웹 기반 서버 관리 플랫폼",
+        "label": "Pterodactyl"
       },
-      "command": {
-        "label": "명령",
-        "description": "서버를 시작하는 데 필요한 Java 명령만 포함"
-      }
-    },
-    "serverType": {
-      "paper": {
-        "label": "페이퍼",
-        "description": "Bukkit 기반 플러그인 로더"
-      },
-      "purpur": {
-        "label": "퍼퍼",
-        "description": "Bukkit 기반 플러그인 로더이지만 더 많은 기능 제공"
-      },
-      "velocity": {
-        "label": "Velocity",
-        "description": "플러그인 로더가 포함된 프록시"
-      },
-      "forge": {
-        "label": "포지",
-        "description": "모드 로더"
-      },
-      "fabric": {
-        "label": "패브릭",
-        "description": "더 나은 모드 로더"
-      },
-      "waterfall": {
-        "label": "워터폴",
-        "description": "지원 종료한 프록시"
-      }
-    },
-    "gui": {
-      "label": "GUI 사용",
-      "description": "내장된 서버 관리 GUI를 표시할지 여부"
-    },
-    "autoRestart": {
-      "label": "자동 재시작",
-      "description": "중지된 후 자동으로 다시 시작할지 여부"
-    },
-    "variables": {
-      "label": "변수 사용",
-      "description": "스크립트 내에서 환경 변수를 사용하여 메모리, 파일 이름 및 기타 자주 변경되는 요소 정의 여부"
-    },
-    "fileName": {
-      "label": "파일 이름",
-      "description": "서버를 시작하는 데 사용될 파일 이름"
-    },
-    "script": {
-      "label": "스크립트",
-      "description": "서버를 시작하는 데 사용할 수 있는 결과 스크립트. 이 파일을 {{fileName}}과 동일한 위치에 두고 실행하십시오!"
-    },
-    "flags": {
-      "label": "플래그",
-      "description": "서버 성능을 최적화하는 데 일반적으로 사용되는 시작 인수의 모음",
-      "none": {
-        "label": "없음",
-        "description": "서버를 위한 비어 있는 상태"
-      },
-      "aikars": {
-        "label": "Aikar 플래그",
-        "description": "서버 성능을 향상시키기 위한 고전적이고 신뢰할 수 있는 플래그"
-      },
-      "benchmarkedG1GC": {
-        "label": "벤치마크 (G1GC)",
-        "description": "벤치마크에서 지원되는 성능 플래그. Aikar 플래그와 유사하게 G1GC 사용"
-      },
-      "benchmarkedZGC": {
-        "label": "벤치마크 (ZGC)",
-        "description": "벤치마크에서 지원되는 성능 플래그. 다양한 시스템 간에 신뢰성이 낮은 ZGC 사용"
-      },
-      "benchmarkedShenandoah": {
-        "label": "벤치마크 (Shenandoah)",
-        "description": "벤치마크에서 지원되는 성능 플래그. Shenandoah 사용으로 hilltty 플래그와 유사"
-      },
-      "hillttys": {
-        "label": "hilltty 플래그",
-        "description": "Shenandoah GC를 기반으로 한 실험적인 성능 플래그. 추가 설정이 필요할 수 있음"
-      },
-      "obyduxs": {
-        "label": "Obydux 플래그",
-        "description": "Etil 플래그 및 벤치마크 (G1GC)를 기반으로 한 실험적인 성능 플래그. Linux 사용자에게만 제공되며 추가 설정이 필요할 수 있음"
-      },
-      "etils": {
-        "label": "Etil 플래그",
-        "description": "Aikar 플래그를 기반으로 한 실험적이고 아카이브 된 성능 플래그. Linux 사용자에게만 제공"
-      },
-      "proxy": {
-        "label": "프록시",
-        "description": "대부분의 프록시 서버 소프트웨어를 위한 일반적인 성능 플래그"
+      "windows": {
+        "description": "가정용 데스크탑에서 가장 일반적으로 사용되는 운영 체제",
+        "label": "윈도우"
       }
     },
     "extraFlags": {
-      "label": "추가 플래그",
-      "description": "성능을 향상시키거나 기능을 변경할 수 있는 추가 플래그",
-      "vectors": {
-        "label": "현대적인 벡터",
-        "description": "Pufferfish 및 그의 파생체에서 지도 항목 렌더링을 최적화하기 위해 SIMD 작업을 활성화"
-      },
       "benchmarkedGraalVM": {
-        "label": "벤치마크 (GraalVM)",
-        "description": "GraalVM 사용자에게만 제공되는 벤치마크 (G1GC)를 위한 추가 성능 플래그"
+        "description": "GraalVM 사용자에게만 제공되는 벤치마크 (G1GC)를 위한 추가 성능 플래그",
+        "label": "벤치마크 (GraalVM)"
+      },
+      "description": "성능을 향상시키거나 기능을 변경할 수 있는 추가 플래그",
+      "label": "추가 플래그",
+      "vectors": {
+        "description": "Pufferfish 및 그의 파생체에서 지도 항목 렌더링을 최적화하기 위해 SIMD 작업을 활성화",
+        "label": "현대적인 벡터"
       }
     },
-    "memory": {
-      "label": "메모리",
-      "description": "서버에 할당할 메모리 (RAM) 양",
-      "warning": {
-        "low": "서버에 할당된 메모리 양을 증가시키는 것이 좋습니다.",
-        "high": "서버에 할당된 메모리 양을 감소시키는 것이 좋습니다."
+    "fileName": {
+      "description": "서버를 시작하는 데 사용될 파일 이름",
+      "label": "파일 이름"
+    },
+    "flags": {
+      "aikars": {
+        "description": "서버 성능을 향상시키기 위한 고전적이고 신뢰할 수 있는 플래그",
+        "label": "Aikar 플래그"
+      },
+      "benchmarkedG1GC": {
+        "description": "벤치마크에서 지원되는 성능 플래그. Aikar 플래그와 유사하게 G1GC 사용",
+        "label": "벤치마크 (G1GC)"
+      },
+      "benchmarkedShenandoah": {
+        "description": "벤치마크에서 지원되는 성능 플래그. Shenandoah 사용으로 hilltty 플래그와 유사",
+        "label": "벤치마크 (Shenandoah)"
+      },
+      "benchmarkedZGC": {
+        "description": "벤치마크에서 지원되는 성능 플래그. 다양한 시스템 간에 신뢰성이 낮은 ZGC 사용",
+        "label": "벤치마크 (ZGC)"
+      },
+      "description": "서버 성능을 최적화하는 데 일반적으로 사용되는 시작 인수의 모음",
+      "etils": {
+        "description": "Aikar 플래그를 기반으로 한 실험적이고 아카이브 된 성능 플래그. Linux 사용자에게만 제공",
+        "label": "Etil 플래그"
+      },
+      "hillttys": {
+        "description": "Shenandoah GC를 기반으로 한 실험적인 성능 플래그. 추가 설정이 필요할 수 있음",
+        "label": "hilltty 플래그"
+      },
+      "label": "플래그",
+      "none": {
+        "description": "서버를 위한 비어 있는 상태",
+        "label": "없음"
+      },
+      "obyduxs": {
+        "description": "Etil 플래그 및 벤치마크 (G1GC)를 기반으로 한 실험적인 성능 플래그. Linux 사용자에게만 제공되며 추가 설정이 필요할 수 있음",
+        "label": "Obydux 플래그"
+      },
+      "proxy": {
+        "description": "대부분의 프록시 서버 소프트웨어를 위한 일반적인 성능 플래그",
+        "label": "프록시"
       }
+    },
+    "gui": {
+      "description": "내장된 서버 관리 GUI를 표시할지 여부",
+      "label": "GUI 사용"
+    },
+    "memory": {
+      "description": "서버에 할당할 메모리 (RAM) 양",
+      "label": "메모리",
+      "warning": {
+        "high": "서버에 할당된 메모리 양을 감소시키는 것이 좋습니다.",
+        "low": "서버에 할당된 메모리 양을 증가시키는 것이 좋습니다."
+      }
+    },
+    "result": "결과",
+    "script": {
+      "description": "서버를 시작하는 데 사용할 수 있는 결과 스크립트. 이 파일을 {{fileName}}과 동일한 위치에 두고 실행하십시오!",
+      "label": "스크립트"
+    },
+    "serverType": {
+      "fabric": {
+        "description": "더 나은 모드 로더",
+        "label": "패브릭"
+      },
+      "forge": {
+        "description": "모드 로더",
+        "label": "포지"
+      },
+      "paper": {
+        "description": "Bukkit 기반 플러그인 로더",
+        "label": "페이퍼"
+      },
+      "purpur": {
+        "description": "Bukkit 기반 플러그인 로더이지만 더 많은 기능 제공",
+        "label": "퍼퍼"
+      },
+      "velocity": {
+        "description": "플러그인 로더가 포함된 프록시",
+        "label": "Velocity"
+      },
+      "waterfall": {
+        "description": "지원 종료한 프록시",
+        "label": "워터폴"
+      }
+    },
+    "software": {
+      "description": "Minecraft 서버가 실행될 소프트웨어입니다.",
+      "label": "소프트웨어"
+    },
+    "subtitle": "최적 플래그로 Minecraft 서버를 시작하는 간단한 스크립트 생성기",
+    "title": "플래그 생성기",
+    "variables": {
+      "description": "스크립트 내에서 환경 변수를 사용하여 메모리, 파일 이름 및 기타 자주 변경되는 요소 정의 여부",
+      "label": "변수 사용"
     }
   }
 }
