--- a/i18n/pt-PT/animtab.json
+++ b/i18n/pt-PT/animtab.json
@@ -1,11 +1,11 @@
 {
-    "animtab": {
-        "title": "TAB animado",
-        "subtitle": "Plugin TAB para criar animações com gradientes",
-        "animationName": "Nome da Animação",
-        "speed": "Velocidade",
-        "outputFormat": "Formato de saída",
-        "outputType": "Tipo de saída",
-        "length": "Comprimento do Gradiente"
-    }
+  "animtab": {
+    "animationName": "Nome da Animação",
+    "length": "Comprimento do Gradiente",
+    "outputFormat": "Formato de saída",
+    "outputType": "Tipo de saída",
+    "speed": "Velocidade",
+    "subtitle": "Plugin TAB para criar animações com gradientes",
+    "title": "TAB animado"
+  }
 }
