--- a/i18n/ru-RU/colorstrip.json
+++ b/i18n/ru-RU/colorstrip.json
@@ -1,9 +1,9 @@
 {
-    "colorstrip": {
-        "title": "Декомпилятор цветового кода",
-        "subtitle": "Показывает все коды цвета / формата из текста",
-        "inputText": "Ваш текст",
-        "output": "Результат",
-        "colorCodeType": "Тип цветового кода"
-    }
+  "colorstrip": {
+    "colorCodeType": "Тип цветового кода",
+    "inputText": "Ваш текст",
+    "output": "Результат",
+    "subtitle": "Показывает все коды цвета / формата из текста",
+    "title": "Декомпилятор цветового кода"
+  }
 }
