--- a/i18n/ru-RU/flags.json
+++ b/i18n/ru-RU/flags.json
@@ -1,145 +1,151 @@
 {
   "flags": {
-    "title": "Генератор кода запуска сервера",
-    "subtitle": "Простой генератор скриптов для запуска серверов Minecraft с оптимальными флагами.",
-    "software": {
-      "label": "Программное обеспечение",
-      "description": "Программное обеспечение, на котором будет работать ваш сервер Minecraft."
+    "autoRestart": {
+      "description": "Следует ли автоматически перезапустить после того, как он будет остановлен.",
+      "label": "Автоперезапуск"
     },
     "config": {
-      "label": "Конфигурация",
-      "description": "Различные дополнения и модификации, которые могут быть сделаны к вашему стартовому скрипту."
+      "description": "Различные дополнения и модификации, которые могут быть сделаны к вашему стартовому скрипту.",
+      "label": "Конфигурация"
     },
-    "result": "Результат",
+    "enviroments": {
+      "description": "The operating system that the server runs on."
+    },
+    "environment": {
+      "label": "Environment"
+    },
     "environments": {
-      "label": "Операционная система",
-      "description": "Операционная система, на которой работает сервер.",
-      "linux": {
-        "label": "Linux",
-        "description": "Наиболее распространенная операционная система, используемая для серверов"
+      "command": {
+        "description": "Требуется только команда java для запуска сервера",
+        "label": "Команда"
       },
-      "windows": {
-        "label": "Windows",
-        "description": "Наиболее распространенная операционная система, используемая для домашних компьютеров"
+      "description": "Операционная система, на которой работает сервер.",
+      "label": "Операционная система",
+      "linux": {
+        "description": "Наиболее распространенная операционная система, используемая для серверов",
+        "label": "Linux"
       },
       "macos": {
-        "label": "macOS",
-        "description": "Операционная система Apple"
+        "description": "Операционная система Apple",
+        "label": "macOS"
       },
       "pterodactyl": {
-        "label": "Pterodactyl",
-        "description": "Веб-серверная платформа, используемая большинством хостов"
+        "description": "Веб-серверная платформа, используемая большинством хостов",
+        "label": "Pterodactyl"
       },
-      "command": {
-        "label": "Команда",
-        "description": "Требуется только команда java для запуска сервера"
-      }
-    },
-    "serverType": {
-      "paper": {
-        "label": "Paper",
-        "description": "Bukkit"
-      },
-      "purpur": {
-        "label": "Purpur",
-        "description": "Загрузчик плагинов на основе Bukkit"
-      },
-      "velocity": {
-        "label": "Velocity",
-        "description": "Прокси с загрузкой плагинов"
-      },
-      "forge": {
-        "label": "Forge",
-        "description": "Загрузчик модов"
-      },
-      "fabric": {
-        "label": "Fabric",
-        "description": "Лучший загрузчик модов"
-      },
-      "waterfall": {
-        "label": "Waterfall",
-        "description": "Устаревший прокси"
-      }
-    },
-    "gui": {
-      "label": "Использовать GUI",
-      "description": "Отображать встроенный интерфейс управления сервером."
-    },
-    "autoRestart": {
-      "label": "Автоперезапуск",
-      "description": "Следует ли автоматически перезапустить после того, как он будет остановлен."
-    },
-    "variables": {
-      "label": "Использовать переменные",
-      "description": "Использовать ли переменные окружения в скрипте для определения памяти, имени файла и других обычно измененных элементов."
-    },
-    "fileName": {
-      "label": "Имя файла",
-      "description": "Имя файла, который будет использоваться для запуска вашего сервера."
-    },
-    "script": {
-      "label": "Скрипт",
-      "description": "Скрипт, который может быть использован для запуска вашего сервера. Поместите этот файл в том же месте, что и {{fileName}}, а затем выполните его!"
-    },
-    "flags": {
-      "label": "Стартер",
-      "description": "Шаблоны аргументов запуска, которые обычно оптимизируют производительность сервера.",
-      "none": {
-        "label": "Отсутствует",
-        "description": "Пустой шаблон для вашего сервера."
-      },
-      "aikars": {
-        "label": "Aikar's Flags",
-        "description": "Классические и надежные флаги для увеличения производительности вашего сервера."
-      },
-      "benchmarkedG1GC": {
-        "label": "Benchmarked (G1GC)",
-        "description": "Значения производительности, поддерживаемые бенчмарками. Использует G1GC, аналогично флагам Aikar."
-      },
-      "benchmarkedZGC": {
-        "label": "Benchmarked (ZGC)",
-        "description": "Флаги производительности, подтвержденные benchmarks. Использует ZGC, который весьма ненадежен в разных системах."
-      },
-      "benchmarkedShenandoah": {
-        "label": "Benchmarked (Shenandoah)",
-        "description": "Значения производительности, поддерживаемые бенчмарками. Использует G1GC, аналогично флагам Aikar."
-      },
-      "hillttys": {
-        "label": "hilltty's Flags",
-        "description": "Экспериментальные флаги производительности, основанные на GC Shenandoah. Может потребоваться дополнительная настройка."
-      },
-      "obyduxs": {
-        "label": "Obydux's Flags",
-        "description": "Экспериментальные флаги производительности, основанные на флагах Etil's и Benchmarked (G1GC), предназначенные исключительно для пользователей Linux. Может потребоваться дополнительная настройка."
-      },
-      "etils": {
-        "label": "Etil's Flags",
-        "description": "Экспериментальные и архивные флаги производительности на основе флагов Aikar'а только для пользователей Linux."
-      },
-      "proxy": {
-        "label": "Прокси-сервер",
-        "description": "Общие флаги производительности для большинства программ прокси-сервера."
+      "windows": {
+        "description": "Наиболее распространенная операционная система, используемая для домашних компьютеров",
+        "label": "Windows"
       }
     },
     "extraFlags": {
-      "label": "Extra Flags",
-      "description": "Дополнительные флаги, которые могут улучшить производительность или изменить функциональность.",
-      "vectors": {
-        "label": "Modern Vectors",
-        "description": "Включает SIMD операции для оптимизации отображения карты на Pufferfish и ее форки."
-      },
       "benchmarkedGraalVM": {
-        "label": "Benchmarked (GraalVM)",
-        "description": "Дополнительные флаги производительности для Benchmarked (G1GC) эксклюзивно для пользователей GraalVM."
+        "description": "Дополнительные флаги производительности для Benchmarked (G1GC) эксклюзивно для пользователей GraalVM.",
+        "label": "Benchmarked (GraalVM)"
+      },
+      "description": "Дополнительные флаги, которые могут улучшить производительность или изменить функциональность.",
+      "label": "Extra Flags",
+      "vectors": {
+        "description": "Включает SIMD операции для оптимизации отображения карты на Pufferfish и ее форки.",
+        "label": "Modern Vectors"
       }
     },
-    "memory": {
-      "label": "Память",
-      "description": "Размер памяти (ОЗУ) для выделения на ваш сервер.",
-      "warning": {
-        "low": "Рекомендуется увеличить объем памяти, выделенной на сервер.",
-        "high": "Рекомендуется уменьшить количество памяти, выделенной серверу."
+    "fileName": {
+      "description": "Имя файла, который будет использоваться для запуска вашего сервера.",
+      "label": "Имя файла"
+    },
+    "flags": {
+      "aikars": {
+        "description": "Классические и надежные флаги для увеличения производительности вашего сервера.",
+        "label": "Aikar's Flags"
+      },
+      "benchmarkedG1GC": {
+        "description": "Значения производительности, поддерживаемые бенчмарками. Использует G1GC, аналогично флагам Aikar.",
+        "label": "Benchmarked (G1GC)"
+      },
+      "benchmarkedShenandoah": {
+        "description": "Значения производительности, поддерживаемые бенчмарками. Использует G1GC, аналогично флагам Aikar.",
+        "label": "Benchmarked (Shenandoah)"
+      },
+      "benchmarkedZGC": {
+        "description": "Флаги производительности, подтвержденные benchmarks. Использует ZGC, который весьма ненадежен в разных системах.",
+        "label": "Benchmarked (ZGC)"
+      },
+      "description": "Шаблоны аргументов запуска, которые обычно оптимизируют производительность сервера.",
+      "etils": {
+        "description": "Экспериментальные и архивные флаги производительности на основе флагов Aikar'а только для пользователей Linux.",
+        "label": "Etil's Flags"
+      },
+      "hillttys": {
+        "description": "Экспериментальные флаги производительности, основанные на GC Shenandoah. Может потребоваться дополнительная настройка.",
+        "label": "hilltty's Flags"
+      },
+      "label": "Стартер",
+      "none": {
+        "description": "Пустой шаблон для вашего сервера.",
+        "label": "Отсутствует"
+      },
+      "obyduxs": {
+        "description": "Экспериментальные флаги производительности, основанные на флагах Etil's и Benchmarked (G1GC), предназначенные исключительно для пользователей Linux. Может потребоваться дополнительная настройка.",
+        "label": "Obydux's Flags"
+      },
+      "proxy": {
+        "description": "Общие флаги производительности для большинства программ прокси-сервера.",
+        "label": "Прокси-сервер"
       }
+    },
+    "gui": {
+      "description": "Отображать встроенный интерфейс управления сервером.",
+      "label": "Использовать GUI"
+    },
+    "memory": {
+      "description": "Размер памяти (ОЗУ) для выделения на ваш сервер.",
+      "label": "Память",
+      "warning": {
+        "high": "Рекомендуется уменьшить количество памяти, выделенной серверу.",
+        "low": "Рекомендуется увеличить объем памяти, выделенной на сервер."
+      }
+    },
+    "result": "Результат",
+    "script": {
+      "description": "Скрипт, который может быть использован для запуска вашего сервера. Поместите этот файл в том же месте, что и {{fileName}}, а затем выполните его!",
+      "label": "Скрипт"
+    },
+    "serverType": {
+      "fabric": {
+        "description": "Лучший загрузчик модов",
+        "label": "Fabric"
+      },
+      "forge": {
+        "description": "Загрузчик модов",
+        "label": "Forge"
+      },
+      "paper": {
+        "description": "Bukkit",
+        "label": "Paper"
+      },
+      "purpur": {
+        "description": "Загрузчик плагинов на основе Bukkit",
+        "label": "Purpur"
+      },
+      "velocity": {
+        "description": "Прокси с загрузкой плагинов",
+        "label": "Velocity"
+      },
+      "waterfall": {
+        "description": "Устаревший прокси",
+        "label": "Waterfall"
+      }
+    },
+    "software": {
+      "description": "Программное обеспечение, на котором будет работать ваш сервер Minecraft.",
+      "label": "Программное обеспечение"
+    },
+    "subtitle": "Простой генератор скриптов для запуска серверов Minecraft с оптимальными флагами.",
+    "title": "Генератор кода запуска сервера",
+    "variables": {
+      "description": "Использовать ли переменные окружения в скрипте для определения памяти, имени файла и других обычно измененных элементов.",
+      "label": "Использовать переменные"
     }
   }
 }
