--- a/i18n/ru-RU/presettools.json
+++ b/i18n/ru-RU/presettools.json
@@ -1,8 +1,8 @@
 {
-    "presettools": {
-        "title": "Обновление пресета",
-        "subtitle": "Это обновит старые пресеты до последней версии.",
-        "input": "Ваш текст",
-        "output": "Результат"
-    }
+  "presettools": {
+    "input": "Ваш текст",
+    "output": "Результат",
+    "subtitle": "Это обновит старые пресеты до последней версии.",
+    "title": "Обновление пресета"
+  }
 }
