--- a/i18n/en-US/app.json
+++ b/i18n/en-US/app.json
@@ -1,16 +1,5 @@
 {
-    "nav": {
-        "hexGradient": "Hex Gradient",
-        "animatedTAB": "Animated TAB",
-        "tabAnimationPreviewer": "TAB Animation Previewer",
-        "sparkProfile": "Spark Profile",
-        "paperTimings": "Paper Timings",
-        "animatedTextures": "Animated Textures",
-        "flags": "Flags",
-        "colorCodeStripper": "Color Code Stripper",
-        "presetTools": "Preset Tools",
-        "privacyPolicy": "Privacy Policy",
-        "termsofService": "Terms of Service",
-        "more": "More Resources"
-    }
+  "app": {
+    "changeLocale": "Change locale"
+  }
 }
