--- a/i18n/es-ES/colorstrip.json
+++ b/i18n/es-ES/colorstrip.json
@@ -1,9 +1,9 @@
 {
-    "colorstrip": {
-        "title": "Quitar código de color",
-        "subtitle": "Quita todos los códigos de color / formato del texto",
-        "inputText": "Introducir texto",
-        "output": "Salida",
-        "colorCodeType": "Tipo de código de color"
-    }
+  "colorstrip": {
+    "colorCodeType": "Tipo de código de color",
+    "inputText": "Introducir texto",
+    "output": "Salida",
+    "subtitle": "Quita todos los códigos de color / formato del texto",
+    "title": "Quitar código de color"
+  }
 }
