--- a/i18n/ko-KR/app.json
+++ b/i18n/ko-KR/app.json
@@ -1,17 +1,5 @@
 {
-    "nav": {
-        "gradients": "그라디언트",
-        "hexGradient": "헥스 그라디언트",
-        "animatedTAB": "애니메이션 탭",
-        "tabAnimationPreviewer": "탭 애니메이션 미리 보기",
-        "analysis": "분석",
-        "sparkProfile": "Spark Profile",
-        "paperTimings": "Paper Timings",
-        "misc": "기타",
-        "animatedTextures": "애니메이션 텍스처",
-        "flags": "플래그",
-        "colorCodeStripper": "색상 코드 제거기",
-        "presetTools": "프리셋 도구",
-        "privacyPolicy": "개인정보 처리방침"
-    }
+  "app": {
+    "changeLocale": "Change locale"
+  }
 }
