--- a/i18n/ko-KR/gradient.json
+++ b/i18n/ko-KR/gradient.json
@@ -1,8 +1,8 @@
 {
-    "gradient": {
-        "title": "헥스 코드 그라데이션",
-        "subtitle": "헥스 코드 색상 그라데이션 생성기",
-        "prefix": "접두사 (일반적으로 명령어에 사용됨)",
-        "prefixPlaceholder": "예: '/nick '"
-    }
+  "gradient": {
+    "prefix": "접두사 (일반적으로 명령어에 사용됨)",
+    "prefixPlaceholder": "예: '/nick '",
+    "subtitle": "헥스 코드 색상 그라데이션 생성기",
+    "title": "헥스 코드 그라데이션"
+  }
 }
