--- a/i18n/nl-NL/colorstrip.json
+++ b/i18n/nl-NL/colorstrip.json
@@ -1,9 +1,9 @@
 {
-    "colorstrip": {
-        "title": "Kleurcode Stripper",
-        "subtitle": "Stript alle kleuren/opmaak codes van een tekst.",
-        "inputText": "Tekst:",
-        "output": "Uitkomst",
-        "colorCodeType": "Kleurcode Type:"
-    }
+  "colorstrip": {
+    "colorCodeType": "Kleurcode Type:",
+    "inputText": "Tekst:",
+    "output": "Uitkomst",
+    "subtitle": "Stript alle kleuren/opmaak codes van een tekst.",
+    "title": "Kleurcode Stripper"
+  }
 }
