--- a/i18n/pl-PL/animtexture.json
+++ b/i18n/pl-PL/animtexture.json
@@ -1,11 +1,11 @@
 {
-    "animtexture": {
-        "title": "Animated Textures",
-        "subtitle": "Easily merge textures for resource pack animations",
-        "textureName": "Texture Name",
-        "cumulative": "Cumulative (Turn this on if gif frames are broken)",
-        "generate": "Generate",
-        "downloadPNG": "Download PNG",
-        "downloadMCMETA": "Download MCMETA"
-    }
+  "animtexture": {
+    "cumulative": "Cumulative (Turn this on if gif frames are broken)",
+    "downloadMCMETA": "Download MCMETA",
+    "downloadPNG": "Download PNG",
+    "generate": "Generate",
+    "subtitle": "Easily merge textures for resource pack animations",
+    "textureName": "Texture Name",
+    "title": "Animated Textures"
+  }
 }
