--- a/i18n/pl-PL/colorstrip.json
+++ b/i18n/pl-PL/colorstrip.json
@@ -1,9 +1,9 @@
 {
-    "colorstrip": {
-        "title": "Color Code Stripper",
-        "subtitle": "Strips all color / format codes from text",
-        "inputText": "Input Text",
-        "output": "Output",
-        "colorCodeType": "Color Code Type"
-    }
+  "colorstrip": {
+    "colorCodeType": "Color Code Type",
+    "inputText": "Input Text",
+    "output": "Output",
+    "subtitle": "Strips all color / format codes from text",
+    "title": "Color Code Stripper"
+  }
 }
