--- a/i18n/pl-PL/gradient.json
+++ b/i18n/pl-PL/gradient.json
@@ -1,8 +1,8 @@
 {
-    "gradient": {
-        "title": "Hex Gradient",
-        "subtitle": "Hex color gradient creator",
-        "prefix": "Prefix (Usually used for commands)",
-        "prefixPlaceholder": "example: '/nick '"
-    }
+  "gradient": {
+    "prefix": "Prefix (Usually used for commands)",
+    "prefixPlaceholder": "example: '/nick '",
+    "subtitle": "Hex color gradient creator",
+    "title": "Hex Gradient"
+  }
 }
