--- a/i18n/pl-PL/presettools.json
+++ b/i18n/pl-PL/presettools.json
@@ -1,8 +1,8 @@
 {
-    "presettools": {
-        "title": "Preset Updater",
-        "subtitle": "This will update older preset versions to the newest version.",
-        "input": "Preset Input",
-        "output": "Output"
-    }
+  "presettools": {
+    "input": "Preset Input",
+    "output": "Output",
+    "subtitle": "This will update older preset versions to the newest version.",
+    "title": "Preset Updater"
+  }
 }
