--- a/i18n/pt-PT/animtexture.json
+++ b/i18n/pt-PT/animtexture.json
@@ -1,11 +1,11 @@
 {
-    "animtexture": {
-        "title": "Texturas Animadas",
-        "subtitle": "Junta texturas animadas facilmente para animações de packs de recursos",
-        "textureName": "Nome da textura",
-        "cumulative": "Cumulativo (Ativa esta opção se os frames do gif estão estragados)",
-        "generate": "Gerar",
-        "downloadPNG": "Download do PNG",
-        "downloadMCMETA": "Download do MCMETA"
-    }
+  "animtexture": {
+    "cumulative": "Cumulativo (Ativa esta opção se os frames do gif estão estragados)",
+    "downloadMCMETA": "Download do MCMETA",
+    "downloadPNG": "Download do PNG",
+    "generate": "Gerar",
+    "subtitle": "Junta texturas animadas facilmente para animações de packs de recursos",
+    "textureName": "Nome da textura",
+    "title": "Texturas Animadas"
+  }
 }
