--- a/i18n/pt-PT/app.json
+++ b/i18n/pt-PT/app.json
@@ -1,17 +1,5 @@
 {
-    "nav": {
-        "gradients": "Gradientes",
-        "hexGradient": "Hexadecimal Gradiente",
-        "animatedTAB": "TAB Animado",
-        "tabAnimationPreviewer": "Visualizador da animação do TAB",
-        "analysis": "Analise",
-        "sparkProfile": "Perfil spark",
-        "paperTimings": "Timings do Paper",
-        "misc": "Misc",
-        "animatedTextures": "Texturas animadas",
-        "flags": "Flags",
-        "colorCodeStripper": "Divisor de códigos de cor",
-        "presetTools": "Ferramentas de preset",
-        "privacyPolicy": "Politica de privacidade"
-    }
+  "app": {
+    "changeLocale": "Change locale"
+  }
 }
