--- a/i18n/ru-RU/app.json
+++ b/i18n/ru-RU/app.json
@@ -1,17 +1,5 @@
 {
-    "nav": {
-        "gradients": "Градиенты",
-        "hexGradient": "Градиент",
-        "animatedTAB": "Анимация TAB",
-        "tabAnimationPreviewer": "Предпросмотр анимации TAB",
-        "analysis": "Анализ",
-        "sparkProfile": "Spark профиль",
-        "paperTimings": "Paper Timings",
-        "misc": "Разное",
-        "animatedTextures": "Анимация текстур",
-        "flags": "Стартер",
-        "colorCodeStripper": "Декомпилятор цветового кода",
-        "presetTools": "Обновление пресетов",
-        "privacyPolicy": "Политика"
-    }
+  "app": {
+    "changeLocale": "Change locale"
+  }
 }
