--- a/i18n/tr-TR/animtab.json
+++ b/i18n/tr-TR/animtab.json
@@ -1,11 +1,11 @@
 {
-    "animtab": {
-        "title": "Animated TAB",
-        "subtitle": "TAB plugin gradient animation creator",
-        "animationName": "Animation Name",
-        "speed": "Speed",
-        "outputFormat": "Output Format",
-        "outputType": "Output Type",
-        "length": "Gradient Length"
-    }
+  "animtab": {
+    "animationName": "Animation Name",
+    "length": "Gradient Length",
+    "outputFormat": "Output Format",
+    "outputType": "Output Type",
+    "speed": "Speed",
+    "subtitle": "TAB plugin gradient animation creator",
+    "title": "Animated TAB"
+  }
 }
