--- a/i18n/tr-TR/flags.json
+++ b/i18n/tr-TR/flags.json
@@ -1,145 +1,151 @@
 {
   "flags": {
-    "title": "Flags Generator",
-    "subtitle": "A simple script generator to start your Minecraft servers with optimal flags.",
-    "software": {
-      "label": "Software",
-      "description": "The software in which your Minecraft server will run on."
+    "autoRestart": {
+      "description": "Whether to automatically restart after it is stopped.",
+      "label": "Auto-restart"
     },
     "config": {
-      "label": "Config",
-      "description": "The various additions and modifications that can be made to your start script."
+      "description": "The various additions and modifications that can be made to your start script.",
+      "label": "Config"
     },
-    "result": "Result",
+    "enviroments": {
+      "description": "The operating system that the server runs on."
+    },
+    "environment": {
+      "label": "Environment"
+    },
     "environments": {
-      "label": "Operating System",
-      "description": "The operating system that the server runs on.",
-      "linux": {
-        "label": "Linux",
-        "description": "The most common operating system used for servers"
+      "command": {
+        "description": "Only the java command required to start the server",
+        "label": "Command"
       },
-      "windows": {
-        "label": "Windows",
-        "description": "The most common operating system used for home desktops"
+      "description": "The operating system that the server runs on.",
+      "label": "Operating System",
+      "linux": {
+        "description": "The most common operating system used for servers",
+        "label": "Linux"
       },
       "macos": {
-        "label": "macOS",
-        "description": "Apple's operating system"
+        "description": "Apple's operating system",
+        "label": "macOS"
       },
       "pterodactyl": {
-        "label": "Pterodactyl",
-        "description": "Web-based server management platform used by most hosts"
+        "description": "Web-based server management platform used by most hosts",
+        "label": "Pterodactyl"
       },
-      "command": {
-        "label": "Command",
-        "description": "Only the java command required to start the server"
-      }
-    },
-    "serverType": {
-      "paper": {
-        "label": "Paper",
-        "description": "Bukkit-based plugin loader"
-      },
-      "purpur": {
-        "label": "Purpur",
-        "description": "Bukkit-based plugin loader but more"
-      },
-      "velocity": {
-        "label": "Velocity",
-        "description": "Proxy with plugin loader"
-      },
-      "forge": {
-        "label": "Forge",
-        "description": "Mod loader"
-      },
-      "fabric": {
-        "label": "Fabric",
-        "description": "Better mod loader"
-      },
-      "waterfall": {
-        "label": "Waterfall",
-        "description": "Deprecated Proxy"
-      }
-    },
-    "gui": {
-      "label": "Use GUI",
-      "description": "Whether to display the built-in server management GUI."
-    },
-    "autoRestart": {
-      "label": "Auto-restart",
-      "description": "Whether to automatically restart after it is stopped."
-    },
-    "variables": {
-      "label": "Use Variables",
-      "description": "Whether to use environment variables within the script to define memory, file name, and other commonly changed elements."
-    },
-    "fileName": {
-      "label": "File Name",
-      "description": "The name of the file that will be used to start your server."
-    },
-    "script": {
-      "label": "Script",
-      "description": "The resulting script that can be used to start your server. Place this file in the same location as {{fileName}}, then execute it!"
-    },
-    "flags": {
-      "label": "Flags",
-      "description": "The collection of start arguments that typically optimize the server's performance.",
-      "none": {
-        "label": "None",
-        "description": "A blank slate for your server."
-      },
-      "aikars": {
-        "label": "Aikar's Flags",
-        "description": "The classic and reliable flags for boosting your server's performance."
-      },
-      "benchmarkedG1GC": {
-        "label": "Benchmarked (G1GC)",
-        "description": "Performance flags backed by benchmarks. Uses G1GC, similar to Aikar's flags."
-      },
-      "benchmarkedZGC": {
-        "label": "Benchmarked (ZGC)",
-        "description": "Performance flags backed by benchmarks. Uses ZGC, which is quite unreliable between different systems."
-      },
-      "benchmarkedShenandoah": {
-        "label": "Benchmarked (Shenandoah)",
-        "description": "Performance flags backed by benchmarks. Uses Shenandoah, similar to hilltty's flags."
-      },
-      "hillttys": {
-        "label": "hilltty's Flags",
-        "description": "Experimental performance flags based on Shenandoah GC. May require additional setup."
-      },
-      "obyduxs": {
-        "label": "Obydux's Flags",
-        "description": "Experimental performance flags based on Etil's Flags and Benchmarked (G1GC), exclusive to Linux users. May require additional setup."
-      },
-      "etils": {
-        "label": "Etil's Flags",
-        "description": "Experimental and archived performance flags based on Aikar's Flags, exclusive to Linux users."
-      },
-      "proxy": {
-        "label": "Proxy",
-        "description": "Generic performance flags for most proxy server software."
+      "windows": {
+        "description": "The most common operating system used for home desktops",
+        "label": "Windows"
       }
     },
     "extraFlags": {
-      "label": "Extra Flags",
-      "description": "Additional flags that may improve performance or change functionality.",
-      "vectors": {
-        "label": "Modern Vectors",
-        "description": "Enables SIMD operations to optimize map item rendering on Pufferfish and its forks."
-      },
       "benchmarkedGraalVM": {
-        "label": "Benchmarked (GraalVM)",
-        "description": "Additional performance flags for Benchmarked (G1GC) exclusive to GraalVM users."
+        "description": "Additional performance flags for Benchmarked (G1GC) exclusive to GraalVM users.",
+        "label": "Benchmarked (GraalVM)"
+      },
+      "description": "Additional flags that may improve performance or change functionality.",
+      "label": "Extra Flags",
+      "vectors": {
+        "description": "Enables SIMD operations to optimize map item rendering on Pufferfish and its forks.",
+        "label": "Modern Vectors"
       }
     },
-    "memory": {
-      "label": "Memory",
-      "description": "The amount of memory (RAM) to allocate to your server.",
-      "warning": {
-        "low": "It's recommended to increase the amount of memory allocated to the server.",
-        "high": "It's recommended to decrease the amount of memory allocated to the server."
+    "fileName": {
+      "description": "The name of the file that will be used to start your server.",
+      "label": "File Name"
+    },
+    "flags": {
+      "aikars": {
+        "description": "The classic and reliable flags for boosting your server's performance.",
+        "label": "Aikar's Flags"
+      },
+      "benchmarkedG1GC": {
+        "description": "Performance flags backed by benchmarks. Uses G1GC, similar to Aikar's flags.",
+        "label": "Benchmarked (G1GC)"
+      },
+      "benchmarkedShenandoah": {
+        "description": "Performance flags backed by benchmarks. Uses Shenandoah, similar to hilltty's flags.",
+        "label": "Benchmarked (Shenandoah)"
+      },
+      "benchmarkedZGC": {
+        "description": "Performance flags backed by benchmarks. Uses ZGC, which is quite unreliable between different systems.",
+        "label": "Benchmarked (ZGC)"
+      },
+      "description": "The collection of start arguments that typically optimize the server's performance.",
+      "etils": {
+        "description": "Experimental and archived performance flags based on Aikar's Flags, exclusive to Linux users.",
+        "label": "Etil's Flags"
+      },
+      "hillttys": {
+        "description": "Experimental performance flags based on Shenandoah GC. May require additional setup.",
+        "label": "hilltty's Flags"
+      },
+      "label": "Flags",
+      "none": {
+        "description": "A blank slate for your server.",
+        "label": "None"
+      },
+      "obyduxs": {
+        "description": "Experimental performance flags based on Etil's Flags and Benchmarked (G1GC), exclusive to Linux users. May require additional setup.",
+        "label": "Obydux's Flags"
+      },
+      "proxy": {
+        "description": "Generic performance flags for most proxy server software.",
+        "label": "Proxy"
       }
+    },
+    "gui": {
+      "description": "Whether to display the built-in server management GUI.",
+      "label": "Use GUI"
+    },
+    "memory": {
+      "description": "The amount of memory (RAM) to allocate to your server.",
+      "label": "Memory",
+      "warning": {
+        "high": "It's recommended to decrease the amount of memory allocated to the server.",
+        "low": "It's recommended to increase the amount of memory allocated to the server."
+      }
+    },
+    "result": "Result",
+    "script": {
+      "description": "The resulting script that can be used to start your server. Place this file in the same location as {{fileName}}, then execute it!",
+      "label": "Script"
+    },
+    "serverType": {
+      "fabric": {
+        "description": "Better mod loader",
+        "label": "Fabric"
+      },
+      "forge": {
+        "description": "Mod loader",
+        "label": "Forge"
+      },
+      "paper": {
+        "description": "Bukkit-based plugin loader",
+        "label": "Paper"
+      },
+      "purpur": {
+        "description": "Bukkit-based plugin loader but more",
+        "label": "Purpur"
+      },
+      "velocity": {
+        "description": "Proxy with plugin loader",
+        "label": "Velocity"
+      },
+      "waterfall": {
+        "description": "Deprecated Proxy",
+        "label": "Waterfall"
+      }
+    },
+    "software": {
+      "description": "The software in which your Minecraft server will run on.",
+      "label": "Software"
+    },
+    "subtitle": "A simple script generator to start your Minecraft servers with optimal flags.",
+    "title": "Flags Generator",
+    "variables": {
+      "description": "Whether to use environment variables within the script to define memory, file name, and other commonly changed elements.",
+      "label": "Use Variables"
     }
   }
 }
