--- a/i18n/zh-CN/app.json
+++ b/i18n/zh-CN/app.json
@@ -1,17 +1,5 @@
 {
-    "nav": {
-        "gradients": "渐变",
-        "hexGradient": "十六进制渐变",
-        "animatedTAB": "TAB动画",
-        "tabAnimationPreviewer": "TAB动画预览器",
-        "analysis": "分析",
-        "sparkProfile": "Spark分析",
-        "paperTimings": "Paper计时",
-        "misc": "其他",
-        "animatedTextures": "动画纹理",
-        "flags": "标志",
-        "colorCodeStripper": "颜色代码去除器",
-        "presetTools": "预设工具",
-        "privacyPolicy": "隐私政策"
-    }
+  "app": {
+    "changeLocale": "Change locale"
+  }
 }
