--- a/i18n/zh-CN/colorstrip.json
+++ b/i18n/zh-CN/colorstrip.json
@@ -1,9 +1,9 @@
 {
-    "colorstrip": {
-        "title": "颜色代码去除器",
-        "subtitle": "从文本中去除所有颜色/格式代码",
-        "inputText": "输入文本",
-        "output": "输出",
-        "colorCodeType": "颜色代码类型"
-    }
+  "colorstrip": {
+    "colorCodeType": "颜色代码类型",
+    "inputText": "输入文本",
+    "output": "输出",
+    "subtitle": "从文本中去除所有颜色/格式代码",
+    "title": "颜色代码去除器"
+  }
 }
