--- a/i18n/en-US/app.json
+++ b/i18n/en-US/app.json
@@ -1,6 +1,6 @@
 {
     "nav": {
-        "hexGradient": "Hex Gradient",
+        "hexGradient": "RGBirdflop",
         "animatedTAB": "Animated TAB",
         "tabAnimationPreviewer": "TAB Animation Previewer",
         "sparkProfile": "Spark Profile",
