--- a/i18n/da-DK/app.json
+++ b/i18n/da-DK/app.json
@@ -1,7 +1,7 @@
 {
     "nav": {
         "gradients": "Gradients",
-        "hexGradient": "Hex Gradient",
+        "hexGradient": "RGBirdflop",
         "animatedTAB": "Animated TAB",
         "tabAnimationPreviewer": "TAB Animation Previewer",
         "analysis": "Analysis",
