--- a/i18n/pl-PL/color.json
+++ b/i18n/pl-PL/color.json
@@ -1,7 +1,7 @@
 {
     "color": {
         "output": "Output",
-        "outputSubtitle": "This is what you put in the chat. Click on it to copy.",
+        "outputSubtitle": "Copy-paste this for RGB text!",
         "colorAmount": "Color Amount",
         "hexColor": "Hex Color",
         "inputText": "Input Text",
