--- a/i18n/zh-CN/color.json
+++ b/i18n/zh-CN/color.json
@@ -24,6 +24,6 @@
     "presets": "预设",
     "strikethrough": "删除线",
     "underline": "下划线",
-    "url": "Export As URL"
+    "url": "导出为 URL"
   }
 }
