RGBirdflop 8.9.0: - updated packages - updated preset version to v3 - format now auto changes format character unless custom is specified - moved format character to custom format section - added toggle for trimming color codes from spaces, useful for gradient lines - changed the way prefixes work - added new options for formatting for minimessage-like formatting - made animtab output a bit more flexible - hidden redundant options in animtab into a toggle in case people need it for other plugins or something - moved tab animation previewer to misc - added prefix/suffix to animtab - merged presettools into rgb websites, all preset versions now work and automatically convert for you if needed - moved a bunch of defaults and stuff into presetutils

--- a/i18n/ru-RU/color.json
+++ b/i18n/ru-RU/color.json
@@ -16,7 +16,7 @@
     "import": "Импорт (Вставь текст сюда)",
     "importedPreset": "Настройки успешно импортированы!",
     "inputText": "Ваш текст",
-    "invalidPreset": "НЕИЗВЕСТНЫЙ ПРЕСЕТ!\nЕсли это старый пресет, пожалуйста, обновите его, используя <a class=\"text-blue-400\" href=\"/PresetTools\">Preset Tools</a> страницу, Если нет, пожалуйста, сообщите <a class=\"text-blue-400\" href=\"https://discord.gg/9vUZ9MREVz\">Разработчикам</a>.",
+    "invalidPreset": "INVALID PRESET! Please report this to the <a class=\"text-blue-400 hover:underline\" href=\"https://discord.gg/9vUZ9MREVz\">Developers</a> with the preset you tried to import.",
     "italic": "Наклонный",
     "output": "Вывод",
     "outputSubtitle": "Ваш результат. Нажмите на него, чтобы скопировать.",
