--- a/i18n/es-ES/color.json
+++ b/i18n/es-ES/color.json
@@ -16,7 +16,7 @@
     "import": "Importar (Pegar aquí)",
     "importedPreset": "¡Importado con éxito!",
     "inputText": "Texto de entrada",
-    "invalidPreset": "PREAJUSTE NO VÁLIDO!\nSi este es un preajuste antiguo, actualícelo utilizando la página de <a class=\"text-blue-400\" href=\"/PresetTools\">herramientas de preajuste</a>, si no, informe a los <a class=\"text-blue-400\" href=\"https://discord.gg/9vUZ9MREVz\">desarrolladores</a>.",
+    "invalidPreset": "INVALID PRESET! Please report this to the <a class=\"text-blue-400 hover:underline\" href=\"https://discord.gg/9vUZ9MREVz\">Developers</a> with the preset you tried to import.",
     "italic": "Itálica",
     "output": "Salida",
     "outputSubtitle": "Esto es lo que pones en el chat. Haz click en él para copiarlo.",
