--- a/i18n/ko-KR/color.json
+++ b/i18n/ko-KR/color.json
@@ -16,7 +16,7 @@
     "import": "가져오기 (여기에 붙여넣기)",
     "importedPreset": "프리셋을 성공적으로 가져왔습니다!",
     "inputText": "입력 텍스트",
-    "invalidPreset": "잘못된 프리셋!\n이전 프리셋인 경우 <a class=\"text-blue-400\" href=\"/PresetTools\">프리셋 도구</a> 페이지를 사용하여 업데이트하십시오. 그렇지 않으면 <a class=\"text-blue-400\" href=\"https://discord.gg/9vUZ9MREVz\">개발자들에게</a> 보고해주세요.",
+    "invalidPreset": "INVALID PRESET! Please report this to the <a class=\"text-blue-400 hover:underline\" href=\"https://discord.gg/9vUZ9MREVz\">Developers</a> with the preset you tried to import.",
     "italic": "이탤릭체",
     "output": "출력",
     "outputSubtitle": "채팅에 입력한 내용입니다. 클릭하여 복사할 수 있습니다.",
