--- a/i18n/nl-NL/color.json
+++ b/i18n/nl-NL/color.json
@@ -16,7 +16,7 @@
     "import": "Importeren (Hier plakken)",
     "importedPreset": "Succesvol de vooraf ingestelde instellingen geupload",
     "inputText": "Tekst:",
-    "invalidPreset": "Ongeldige preset!\nAls dit een oude preset is, update deze dan met de <a class=\"text-blue-400\" href=\"/PresetTools\">Preset Tools</a> pagina, Zo niet, rapporteer dit dan bij de <a class=\"text-blue-400\" href=\"https://discord.gg/9vUZ9MREVz\">Ontwikkelaars</a>.",
+    "invalidPreset": "INVALID PRESET! Please report this to the <a class=\"text-blue-400 hover:underline\" href=\"https://discord.gg/9vUZ9MREVz\">Developers</a> with the preset you tried to import.",
     "italic": "Schuingedrukt",
     "output": "Output",
     "outputSubtitle": "Dit is wat je in de chat plaatst. Klik erop om te kopiëren.",
