--- a/i18n/pl-PL/color.json
+++ b/i18n/pl-PL/color.json
@@ -16,7 +16,7 @@
     "import": "Import (Paste here)",
     "importedPreset": "Successfully imported preset!",
     "inputText": "Input Text",
-    "invalidPreset": "INVALID PRESET!\nIf this is an old preset, please update it using the <a class=\"text-blue-400\" href=\"/PresetTools\">Preset Tools</a> page, If not please report to the <a class=\"text-blue-400\" href=\"https://discord.gg/9vUZ9MREVz\">Developers</a>.",
+    "invalidPreset": "INVALID PRESET! Please report this to the <a class=\"text-blue-400 hover:underline\" href=\"https://discord.gg/9vUZ9MREVz\">Developers</a> with the preset you tried to import.",
     "italic": "Italic",
     "output": "Output",
     "outputSubtitle": "Copy-paste this for RGB text!",
