--- a/i18n/pt-PT/color.json
+++ b/i18n/pt-PT/color.json
@@ -16,7 +16,7 @@
     "import": "Importar (cola aqui)",
     "importedPreset": "Preset importada com sucesso!",
     "inputText": "Texto de Input",
-    "invalidPreset": "PRESET INVÁLIDA!\nSe isto é uma preset antiga, por favor actualiza com a página <a class=\"text-blue-400\" href=\"/PresetTools\">Preset Tools</a>, caso contrário, reporta aos <a class=\"text-blue-400\" href=\"https://discord.gg/9vUZ9MREVz\">Programadores</a>.",
+    "invalidPreset": "INVALID PRESET! Please report this to the <a class=\"text-blue-400 hover:underline\" href=\"https://discord.gg/9vUZ9MREVz\">Developers</a> with the preset you tried to import.",
     "italic": "Italico",
     "output": "Output",
     "outputSubtitle": "Isto é o que metes no chat. Clica para copia",
