--- a/i18n/zh-CN/color.json
+++ b/i18n/zh-CN/color.json
@@ -16,7 +16,7 @@
     "import": "导入（粘贴到这里）",
     "importedPreset": "成功导入预设！",
     "inputText": "输入文本",
-    "invalidPreset": "无效的预设！\n如果这是一个旧的预设，请使用<a class=\"text-blue-400\" href=\"/PresetTools\">预设工具</a>页面更新它，如果不是，请报告给<a class=\"text-blue-400\" href=\"https://discord.gg/9vUZ9MREVz\">开发者</a>。",
+    "invalidPreset": "INVALID PRESET! Please report this to the <a class=\"text-blue-400 hover:underline\" href=\"https://discord.gg/9vUZ9MREVz\">Developers</a> with the preset you tried to import.",
     "italic": "斜体",
     "output": "输出",
     "outputSubtitle": "这是你在聊天中输入的内容。点击它以复制。",
